Added EventView activity
To be worked on:
Upon clicking an RV item, multiple instances of the target activity are beng launched. The no. of times the activity is launched is an AP.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Activities.EventsView"/>
-        <activity android:name=".Activities.Events">
-        </activity>
+        <activity android:name=".Activities.EventsView" />
+        <activity android:name=".Activities.Events"></activity>
+        <activity android:name=".Activities.EventView"></activity>
     </application>
 
 </manifest>
