--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.EventsView" />
-        <activity android:name=".Activities.Events"></activity>
-        <activity android:name=".Activities.EventView"></activity>
+        <activity android:name=".Activities.Events" />
+        <activity android:name=".Activities.EventView" />
+        <activity android:name=".Activities.ProfileActivity" />
+        <activity android:name=".Activities.LoginActivity"></activity>
     </application>
 
 </manifest>
